#+TITLE: Changelog

* Unreleased

* 2022-09-07
** Added
*** add cljstyle configuration to align with Clojure style and cljfmt formatting in Clojure LSP
*** format deps.edn with cljstyle
*** cljstyle workflow using clojure-setup GitHub action

** Changed
*** updated versions of GitHub actions used in the GitHub workflows during CI
*** Update library versions using `clojure -T:search/outdated`

  | :name                                  |                                 :current |                                  :latest |
  |----------------------------------------+------------------------------------------+------------------------------------------|
  | clj-kondo/clj-kondo                    |                               2022.06.22 |                               2022.08.03 |
  | cljfmt/cljfmt                          |                                    0.8.2 |                                    0.9.0 |
  | com.clojure-goes-fast/clj-memory-meter |                                    0.1.3 |                                    0.2.1 |
  | com.github.liquidz/antq                |                                  1.9.859 |                                  2.0.895 |
  | com.github.seancorfield/next.jdbc      |                                  1.2.780 |                                  1.2.796 |
  | djblue/portal                          |                                   0.28.0 |                                   0.30.0 |
  | jonase/eastwood                        |                                    1.2.4 |                                    1.2.5 |
  | lambdaisland/kaocha                    |                                1.68.1059 |                                1.69.1069 |
  | nrepl/nrepl                            |                                    0.9.0 |                                    1.0.0 |
  | nvd-clojure/nvd-clojure                |                                    2.7.0 |                                    2.8.0 |