@@ -1,50 +1,0 @@
-name: 'Clojure format check'
-
-on:
-  pull_request:
-  push:
-    branches:
-      - live
-
-jobs:
-  tests:
-    name: 'Clojure Format Check'
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🚀 Job automatically triggered by ${{ github.event_name }}"
-      - run: echo "🐧 Job running on ${{ runner.os }} server"
-      - run: echo "🐙 Using ${{ github.ref }} branch from ${{ github.repository }} repository"
-
-      - name: 'Checkout code'
-        uses: actions/checkout@v3.0.2
-      - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
-
-      # - name: 'Prepare Java runtime'
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '17'
-
-      # - name: 'Cache Clojure Dependencies'
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       ~/.m2/repository
-      #       ~/.gitlibs
-      #     key: ${{ runner.os }}-clojure-deps-${{ hashFiles('deps.edn') }}
-      #     restore-keys: ${{ runner.os }}-clojure-deps-
-
-      - name: 'Install cljstyle'
-        uses: DeLaGuardo/setup-clojure@9.5
-        with:
-          # cli: 1.11.1.1149      # Clojure CLI
-          cljstyle: 0.15.0      # cljstyle
-          # clj-kondo: 2022.05.31 # Clj-kondo
-          # bb: 0.7.8           # Babashka
-
-      - name: 'Check Clojure Style'
-        run: cljstyle check --report
-
-      - run: echo "🎨 style and format of Clojure code checked"
-
-      - run: echo "🍏 Job status is ${{ job.status }}."
