@@ -1,23 +1,0 @@
-name: "Lint with clj-kondo"
-on:
-  pull_request:
-    paths:
-      - 'deps.edn'
-  push:
-    paths:
-      - 'deps.edn'
-    branches:
-      - live
-
-jobs:
-  lint:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: DeLaGuardo/setup-clj-kondo@master
-        with:
-          version: '2022.08.03'
-
-      - uses: actions/checkout@v3
-
-      - name: Run on Ubuntu
-        run: clj-kondo --lint deps.edn --config '{:output {:pattern "::{{level}} file={{filename}},line={{row}},col={{col}}::{{message}}"}}'
