@@ -1,0 +1,36 @@
+name: 'Quality Checks'
+
+on:
+  pull_request:
+  push:
+    branches:
+      - live
+
+jobs:
+  tests:
+    name: 'Check Code Quality'
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🚀 Job automatically triggered by ${{ github.event_name }}"
+      - run: echo "🐧 Job running on ${{ runner.os }} server"
+      - run: echo "🐙 Using ${{ github.ref }} branch from ${{ github.repository }} repository"
+
+      - name: 'Checkout code'
+        uses: actions/checkout@v3.1.0
+      - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
+
+      - name: 'Install tools'
+        uses: DeLaGuardo/setup-clojure@10.1
+        with:
+          cljstyle: 0.15.0
+          clj-kondo: 2022.11.0
+
+      - name: 'Lint Clojure'
+        run: clj-kondo --lint deps.edn --config '{:output {:pattern "::{{level}} file={{filename}},line={{row}},col={{col}}::{{message}}"}}'
+
+      - name: 'Check Clojure Style'
+        run: cljstyle check --report
+
+      - run: echo "🎨 style and format of Clojure code checked"
+
+      - run: echo "🍏 Job status is ${{ job.status }}."
